# rpg2k3-gb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: Ideas.txt  (+21 more)
src/core/: CMakeLists.txt  MemorySizes.h  RPGMaker.h
src/core/core/def/: Globals.h  MemorySizes.h  RPGMaker.h
src/core/core/emu_interface/: RPGEntryPoint.h  RPGMakerInterface.h
src/core/core/lcf/: Database.cpp  Database.h  Map.cpp  Map.h  MapTree.cpp
src/core/core/lcf/database/: Character.cpp  Character.h  CommonEvent.cpp  CommonEvent.h  Item.cpp  Item.h  LCFType.cpp  LCFType.h
src/core/core/lcf/event/: EventCommand.cpp  EventCommand.h  EventCommandFactory.cpp  EventCommandFactoryDef.h
src/core/core/lcf/map/: Event.cpp  Event.h  EventPage.cpp
src/core/core/lcf_serializers/: CommonEventSerializer.cpp  CommonEventSerializer.h  DatabaseSerializer.cpp  DatabaseSerializer.h  EventCommandSerializer.cpp  EventCommandSerializerRAPID.cpp  EventCommandSerializerRAPID.h  MapSerializer.cpp  MapSerializer.h  MapSerializerRAPID.cpp  MapTreeSerializer.cpp  MapTreeSerializer.h
src/core/core/structure/: Logger.cpp  Logger.h  Singleton.h  StateMachine.h
src/core/core/utilities/: GBHelper.cpp  GBHelper.h  RPGHelper.cpp  RPGHelper.h
src/core/def/: Globals.h  MemorySizes.h  RPGMaker.h  VarMapping.h
src/core/emu_interface/: RPGEntryPoint.h  RPGMakerInterface.h
src/core/lcf/: CMakeLists.txt  Character.cpp  Character.h  CommonEvent.cpp  CommonEvent.h  Database.cpp  Database.h  Event.cpp  Event.h  EventCommand.cpp  EventCommand.h  EventPage.cpp  EventPage.h  Filemode.h  Item.cpp  Item.h  LCFType.cpp  Map.cpp  Map.h  MapInfo.cpp  MapTree.cpp  MapTree.h  Switch.cpp  Switch.h  Variable.cpp  Variable.h
src/core/lcf/common/: EventCommand.cpp  EventCommand.h
src/core/lcf/database/: Character.cpp  Character.h  CommonEvent.cpp  CommonEvent.h  Item.cpp  Item.h  LCFType.cpp  LCFType.h
src/core/lcf/event/: EventCommand.h  EventCommandFactory.cpp  EventCommandFactory.h  EventCommandFactoryDef.h
src/core/lcf/map/: Event.cpp  Event.h  EventPage.cpp  EventPage.h
src/core/lcf/map_tree/: MapInfo.cpp  MapInfo.h
src/core/lcf_serializers/: CharacterSerializer.cpp  CharacterSerializer.h  CommonEventSerializer.cpp  CommonEventSerializer.h  DatabaseSerializer.cpp  DatabaseSerializer.h  EventCommandSerializer.cpp  EventCommandSerializer.h  EventCommandSerializerRAPID.cpp  EventCommandSerializerRAPID.h  EventPageSerializer.cpp  EventPageSerializer.h  EventSerializer.cpp  EventSerializer.h  ItemSerializer.cpp  ItemSerializer.h  LCFTypeSerializer.cpp  LCFTypeSerializer.h  MapInfoSerializer.cpp  MapInfoSerializer.h  MapSerializer.cpp  MapSerializer.h  MapSerializerRAPID.cpp  MapSerializerRAPID.h  MapTreeSerializer.cpp  MapTreeSerializer.h  Serializer.h  SwitchSerializer.cpp  SwitchSerializer.h  Templates.h  VariableSerializer.cpp  VariableSerializer.h
src/core/lcf_serializers/common/: EventCommandSerializer.cpp  EventCommandSerializer.h
src/core/lcf_serializers/database/: CharacterSerializer.cpp  CharacterSerializer.h  CommonEventSerializer.cpp  CommonEventSerializer.h  ItemSerializer.cpp  ItemSerializer.h  LCFTypeSerializer.cpp  LCFTypeSerializer.h
src/core/lcf_serializers/map/: EventPageSerializer.cpp  EventPageSerializer.h  EventSerializer.cpp  EventSerializer.h
src/core/lcf_serializers/map_tree/: MapInfoSerializer.cpp  MapInfoSerializer.h
src/core/lcf_serializers/serializer_types/: FullSerializer.h  MultiSerializer.h  PartialMultiSerializer.h  PartialSerializer.h
src/core/structure/: Logger.cpp  Logger.h  Singleton.h  StateMachine.h
src/core/utilities/: RPGHelper.h
src/cppRPGenv/: CMakeLists.txt  cppRPGenv.cpp
src/cppRPGenv/cppRPGenv/: pch.h
src/cppRPGenv/cppRPGenv/interface_impl/: RPGMakerImpl.cpp  RPGMakerImpl.h
src/cppRPGenv/cppRPGenv/manager/: InputManager.cpp  InputManager.h  LCFManager.cpp  RenderManager.cpp  RenderManager.h  VariableManager.cpp  VariableManager.h
src/cppRPGenv/cppRPGenv/system/: SystemStateMachine.cpp  SystemStateMachine.h
src/cppRPGenv/interface_impl/: RPGMakerImpl.cpp  RPGMakerImpl.h
src/cppRPGenv/manager/: InputManager.cpp  InputManager.h  LCFManager.cpp  LCFManager.h  RenderManager.cpp  RenderManager.h  VariableManager.cpp  VariableManager.h
src/cppRPGenv/manager/renderer/: ChoiceBox.h  ImGUIRenderer.cpp  InputBox.h  RenderDef.h  TextBox.cpp  TextBox.h
src/cppRPGenv/manager/structure/: ManagerInterface.h
src/cppRPGenv/system/: SystemStateMachine.cpp  SystemStateMachine.h
src/emu/: CMakeLists.txt  EMUEntryPoint.cpp  EMUEntryPoint.h
src/emu/emu/: EMUEntryPoint.cpp  EMUEntryPoint.h  pch.h
src/emu/emu/cpu/: InterruptHandler.cpp  InterruptHandler.h
src/emu/emu/def/: EmuState.h
src/emu/emu/io/: Joypad.cpp  Joypad.h  MMIO.cpp  MMIO.h  Timer.cpp  Timer.h
src/emu/emu/memory/: MBC.cpp  MBC.h  MMU.cpp  MMU.h
src/emu/emu/util/: DebugUtil.cpp  DebugUtil.h
src/gb2rpg/: CMakeLists.txt  gb2rpg.cpp
src/gb2rpg/cli/: CLI.h
src/gb2rpg/def/: Globals.h
src/gb2rpg/file/: Map.h
src/gb2rpg/gb2rpg/: pch.h
src/gb2rpg/gb2rpg/cli/: CLI.cpp
src/gb2rpg/gb2rpg/file/: Database.cpp  GBFile.cpp  GBFile.h  GBFile.inl  Map.cpp  MapTree.cpp
src/gb2rpg/gb2rpg/project/: ProjectGenerator.cpp
src/gb2rpg/project/: ProjectGenerator.cpp
src/gb2rpg/src/: CLI.cpp  Database.cpp  GBFile.cpp  GBFile.h  Map.cpp  MapTree.cpp  ProjectGenerator.cpp
src/tools/cppRPGenv/: CMakeLists.txt  cppRPGenv.cpp
src/tools/cppRPGenv/interface/: RPGEntryPoint.h  RPGMakerInterface.h
src/tools/cppRPGenv/interface_impl/: RPGMakerImpl.cpp  RPGMakerImpl.h
src/tools/cppRPGenv/manager/: InputManager.cpp  InputManager.h  LCFManager.cpp  LCFManager.h  RenderManager.cpp  RenderManager.h  VariableManager.h
src/tools/cppRPGenv/system/: SystemCore.cpp  SystemCore.h  SystemStateMachine.cpp  SystemStateMachine.h
src/tools/gb2rpg/: CMakeLists.txt  gb2rpg.cpp
src/tools/gb2rpg/src/: CLI.cpp  CLI.h  Database.cpp  Database.h  GBFile.cpp  GBFile.h  Globals.h  Map.cpp  Map.h  MapTree.cpp  MapTree.h  ProjectGenerator.cpp  ProjectGenerator.h  RPGHelper.cpp  RPGHelper.h  tinyxml2_helper.cpp  tinyxml2_helper.h
(+56 files in other folders)
